; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_rangetypes_selfuncs.c_length_hist_bsearch.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_rangetypes_selfuncs.c_length_hist_bsearch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, double, i32)* @length_hist_bsearch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @length_hist_bsearch(i32* %0, i32 %1, double %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca double, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca double, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store double %2, double* %7, align 8
  store i32 %3, i32* %8, align 4
  store i32 -1, i32* %9, align 4
  %13 = load i32, i32* %6, align 4
  %14 = sub nsw i32 %13, 1
  store i32 %14, i32* %10, align 4
  br label %15

15:                                               ; preds = %46, %4
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* %10, align 4
  %18 = icmp slt i32 %16, %17
  br i1 %18, label %19, label %47

19:                                               ; preds = %15
  %20 = load i32, i32* %9, align 4
  %21 = load i32, i32* %10, align 4
  %22 = add nsw i32 %20, %21
  %23 = add nsw i32 %22, 1
  %24 = sdiv i32 %23, 2
  store i32 %24, i32* %11, align 4
  %25 = load i32*, i32** %5, align 8
  %26 = load i32, i32* %11, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i32, i32* %25, i64 %27
  %29 = load i32, i32* %28, align 4
  %30 = call double @DatumGetFloat8(i32 %29)
  store double %30, double* %12, align 8
  %31 = load double, double* %12, align 8
  %32 = load double, double* %7, align 8
  %33 = fcmp olt double %31, %32
  br i1 %33, label %41, label %34

34:                                               ; preds = %19
  %35 = load i32, i32* %8, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %43

37:                                               ; preds = %34
  %38 = load double, double* %12, align 8
  %39 = load double, double* %7, align 8
  %40 = fcmp ole double %38, %39
  br i1 %40, label %41, label %43

41:                                               ; preds = %37, %19
  %42 = load i32, i32* %11, align 4
  store i32 %42, i32* %9, align 4
  br label %46

43:                                               ; preds = %37, %34
  %44 = load i32, i32* %11, align 4
  %45 = sub nsw i32 %44, 1
  store i32 %45, i32* %10, align 4
  br label %46

46:                                               ; preds = %43, %41
  br label %15

47:                                               ; preds = %15
  %48 = load i32, i32* %9, align 4
  ret i32 %48
}

declare dso_local double @DatumGetFloat8(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
